--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 :root{
     --poppins: "Poppins", sans-serif;
     --inter: "Inter", sans-serif;
@@ -6,7 +11,6 @@
     --medium: 500;
     --primary-color: #3A3A3A;
     }
-
 
 /* font code */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@@ -47,4 +51,54 @@ nav ul li a {
     font-weight: var(--semi-bold);
     font-family: var(--poppins);
     font-size: 1rem;
+}
+
+/* Banner section */
+
+.banner{
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: 50px auto;
+    align-items: center;
+    align-items: center; 
+}
+
+.left-section{
+    width: 582px;
+    height: 270px;
+    font-family: var(--poppins);
+    font-size: 1rem;
+    color: var(--primary-color);
+}
+
+.banner-title{
+    font-weight: var(--bold);
+    font-size: 3.25rem;
+}
+
+.banner-description{
+    font-weight: var(--semi-bold);
+    margin: 16px 0;
+}
+
+.btn{
+    background-color: #E02C6D;
+    color: #FFFFFF;
+    border: none;
+    width: 196px;
+    height: 44px;
+    border-radius: 40px;
+    font-family: var(--poppins);
+    font-size: 1rem;
+    font-weight: var(--bold);
+}
+.right-section{
+    width: 475px;
+    height: 475px;
+    background-image: url(../images/Circle\ design.svg);
+    text-align: center;
+}
+.right-section img{
+    width: 440px;
+    height: 414px;
 }
